--- a/test.css
+++ b/test.css
@@ -6,9 +6,10 @@ body{
 }
 
 .cell{
+	background: url('scenery.png') no-repeat no-repeat;
 	display: block;
-	width: 20px;
-	height: 20px;
+	width: 16px;
+	height: 16px;
 	float: left;
 }
 
@@ -34,4 +35,63 @@ body{
 
 .yellow{
 	background: yellow;
+}
+
+.grass{
+}
+
+.grassDeco1{
+	background-position: -16px 0px;
+}
+
+.water{
+	background-position: -160px 0px;
+}
+
+.waterDeco1{
+	background-position: -160px -16px;
+}
+
+.tree{
+	background-position: -64px -32px;
+}
+
+.forest{
+	background-position: -96px -16px;
+}
+
+.forest00{
+	background-position: -80px 0px;
+}
+
+.forest01{
+	background-position: -96px 0px;
+}
+
+.forest02{
+	background-position: -112px 0px;
+}
+
+.forest10{
+	background-position: -80px -16px;
+}
+
+.forest11{
+	background-position: -96px -16px;
+}
+
+.forest12{
+	background-position: -112px -16px;
+}
+
+.forest20{
+	background-position: -80px -32px;
+}
+
+.forest21{
+	background-position: -96px -32px;
+}
+
+.forest22{
+	background-position: -112px -32px;
 }
